Dev 10 : Multiaccount support
+ Added multi account support
+ Added system proxy support
+ Fixed minor bugs

Dev 9 Hotfix (Optional)
+ Added support for a new token type

Dev 9 : Fix the detection
+ Fixed the token detection
+ Added config integrity check
+ Better handling of errors
* Fixed some bugs

Dev 8 : Security Updates
+ Added Discord process protection
+ Added DTP thread protection
+ Moved integrity check settings in the encrypted config
+ Added an update checker in the about tab
* Fixed minor bugs